# whalefall

./: .gitignore  LICENSE  README.md  pyproject.toml
src/whalefall/: README.md  main.py
src/whalefall/agent/: __init__.py  compaction.py  events.py  executor.py  hooks.py  loop.py  query_engine.py
src/whalefall/agent/roles/: __init__.py  config.py  loader.py  parts.py
src/whalefall/agent/roles/definitions/echo-tester/: AGENT.md
src/whalefall/agent/roles/definitions/explore/: AGENT.md
src/whalefall/agent/roles/definitions/general/: AGENT.md
src/whalefall/agent/roles/definitions/plan/: AGENT.md
src/whalefall/agent/roles/definitions/verify/: AGENT.md
src/whalefall/core/: __init__.py  log.py  runtime.py
src/whalefall/llm/: config.py  llm_client.py
src/whalefall/llm/config/: llm_config.ini.example
src/whalefall/llm/gateway/: __init__.py  clients.py  response.py
src/whalefall/llm/postprocess/: __init__.py  json_cleaner.py  text_cleaner.py  tokens.py
src/whalefall/mcp/: __init__.py  client.py  config.yaml.example
src/whalefall/mcp/plugins/: __init__.py  hello.py
src/whalefall/mcp/server/: __init__.py  __main__.py  app.py
src/whalefall/permissions/: __init__.py  bash_guard.py  manager.py
src/whalefall/skills/demo/nested/alpha/: SKILL.md
src/whalefall/skills/demo/nested/beta/: SKILL.md
src/whalefall/skills/general/weather/: SKILL.md
src/whalefall/storage/: __init__.py  last_session.py  retention.py  session_store.py  trace.py  transcripts.py
src/whalefall/tests/: test_bash_guard.py  test_executor.py  test_llm_postprocess.py  test_notebook_edit.py  test_permissions.py  test_query_engine_project_prompt.py  test_render_system_prompt.py  test_roles_e2e.py  test_session_store.py  test_skill_filter.py  test_slash.py
src/whalefall/tools/: __init__.py  ask.py  base.py  bash.py  config.py  edit.py  fetch.py  glob.py  grep.py  notebook_edit.py  plan_mode.py  read.py  registry.py  skill.py  sleep.py  subagent.py  todo.py  web_browser.py  web_search.py  write.py
src/whalefall/ui/: __init__.py  cli.py  streaming.py  web.py
src/whalefall/ui/slash/: __init__.py  core.py
src/whalefall/ui/static/: index.html
