[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "whalefall"
version = "0.1.0"
description = "A hackable, local agent harness in pure Python: Claude Code-style tools, MCP, skills, subagents, and an 8-step permission pipeline. Works with OpenAI, DeepSeek, Qwen, Ollama, and any OpenAI-compatible model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Parker Chao" },
]
keywords = [
    "llm",
    "agent",
    "ai-agent",
    "llm-agent",
    "agent-harness",
    "agent-framework",
    "autonomous-agent",
    "coding-agent",
    "terminal-agent",
    "cli-agent",
    "mcp",
    "model-context-protocol",
    "openai",
    "anthropic",
    "deepseek",
    "qwen",
    "ollama",
    "local-llm",
    "self-hosted",
    "claude-code",
    "claude-code-alternative",
    "cursor-alternative",
    "aider-alternative",
    "tool-calling",
    "function-calling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Utilities",
    "Environment :: Console",
    "Environment :: Web Environment",
]
dependencies = [
    "openai>=1.40.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
whalefall = "whalefall.main:main"

[project.urls]
Homepage = "https://github.com/Parker617/whalefall"
Repository = "https://github.com/Parker617/whalefall"
Issues = "https://github.com/Parker617/whalefall/issues"
Documentation = "https://github.com/Parker617/whalefall#readme"
Changelog = "https://github.com/Parker617/whalefall/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/whalefall"]

[tool.hatch.build.targets.wheel.force-include]
"src/whalefall/skills" = "whalefall/skills"
"src/whalefall/agent/roles/definitions" = "whalefall/agent/roles/definitions"
"src/whalefall/ui/static" = "whalefall/ui/static"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["src/whalefall/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
